--- a/1-Ramp up/5-OOP/Ejercicios Clases y Objetos.ipynb
+++ b/1-Ramp up/5-OOP/Ejercicios Clases y Objetos.ipynb
@@ -41,10 +41,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Tienda:\n",
+    "    '''\n",
+    "    Clase con los componentes de una tienda de Electrodomesticos S.A.\n",
+    "    atributos:\n",
+    "        tipo = Electrodomestico -> String\n",
+    "        abierta = True -> Bool\n",
+    "    '''\n",
+    "\n",
+    "    tipo = \"Electrodomesticos\"\n",
+    "    abierta = True\n",
+    "\n",
+    "    def __init__(self, nombre, direccion, num_empleados, ventas_3_meses):\n",
+    "        '''\n",
+    "        Elementos particulares de cada tienda\n",
+    "        Input:\n",
+    "            nombre: string\n",
+    "            direccion: string\n",
+    "            num_emp: int\n",
+    "            ventas_3_meses: list\n",
+    "        '''\n",
+    "        self.nombre = nombre\n",
+    "        self.direccion = direccion\n",
+    "        self.num_empleados = num_empleados\n",
+    "        self.ventas_3_meses = ventas_3_meses\n",
+    "\n",
+    "    def tot_ventas(self):\n",
+    "        '''\n",
+    "        Metodo que suma todas las ventas de la tienda\n",
+    "        Output:\n",
+    "            total de ventas -> float/int\n",
+    "        '''\n",
+    "        return sum(self.ventas_3_meses)\n",
+    "\n",
+    "    def vent_empl(self):\n",
+    "        '''\n",
+    "        Calcula la media de de las ventas por empleado\n",
+    "        output:\n",
+    "            float con la media\n",
+    "        '''\n",
+    "\n",
+    "        return self.tot_ventas()/self.num_empleados\n",
+    "\n",
+    "    def nombre_direc(self):\n",
+    "        '''\n",
+    "        Metodo que devuelve un string con el nombre y la direccion\n",
+    "        Output:\n",
+    "            string\n",
+    "        '''\n",
+    "\n",
+    "        return \"Nombre tienda: \" + self.nombre + \"\\nDireccion: \" + self.direccion\n",
+    "\n",
+    "    def ventas_ult_mes(self):\n",
+    "        '''\n",
+    "        Ventas del utlimo mes\n",
+    "        Output:\n",
+    "            float/int\n",
+    "        '''\n",
+    "\n",
+    "        v_ult_mes = self.ventas_3_meses[-1]\n",
+    "        return v_ult_mes\n",
+    "\n",
+    "    def proyec_marketing(self, marketing):\n",
+    "        '''\n",
+    "        Método para dar una proyección de las ventas en caso de haber invertido X dinero \n",
+    "        en marketing en esa tienda. Siendo X el parámetro de entrada. Si X es menor de 1000, \n",
+    "        las ventas de los ultimos 3 meses hubiesen sido de (1.2 x ventas), si es mayor o igual de 1000,\n",
+    "        las ventas hubiesen sido de (1.5 x venta). El método reescribe el atributo de ventas en los \n",
+    "        últimos 3 meses, y además devuelve las ventas con el aumento\n",
+    "        Input:\n",
+    "            marketing: cantidad invertida en marketing -> float/int\n",
+    "        Output:\n",
+    "            lista de floats con el resultado de aplicar el algoritmo marketing\n",
+    "        '''\n",
+    "        output = []\n",
+    "\n",
+    "        for i in self.ventas_3_meses:\n",
+    "            if marketing < 1000:\n",
+    "                output.append(i*1.2)\n",
+    "            else:\n",
+    "                output.append(i*1.5)\n",
+    "\n",
+    "        self.ventas_3_meses = output\n",
+    "        return output\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Electrodomesticos\n",
+      "True\n",
+      "mi tienda 1\n",
+      "Avenida del electrodomestico\n",
+      "3\n",
+      "\n",
+      "4500\n",
+      "1500.0\n",
+      "Nombre tienda: mi tienda 1\n",
+      "Direccion: Avenida del electrodomestico\n",
+      "1500\n",
+      "[1500.0, 3000.0, 2250.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apartado 2\n",
+    "tienda1 = Tienda(\"mi tienda 1\", \"Avenida del electrodomestico\", 3, [1000, 2000, 1500])\n",
+    "tienda2 = Tienda(\"mi tienda 2\", \"Calle de los ordenadores\", 5, [2000, 5000, 1500])\n",
+    "tienda3 = Tienda(\"mi tienda 3\", \"Camino de la tablet\", 10, [10000, 6000, 12000])\n",
+    "\n",
+    "# Apartado 3\n",
+    "print(tienda1.tipo)\n",
+    "print(tienda1.abierta)\n",
+    "print(tienda1.nombre)\n",
+    "print(tienda1.direccion)\n",
+    "print(tienda1.num_empleados)\n",
+    "\n",
+    "print(\"\")\n",
+    "print(tienda1.tot_ventas())\n",
+    "print(tienda1.vent_empl())\n",
+    "print(tienda1.nombre_direc())\n",
+    "print(tienda1.ventas_ult_mes())\n",
+    "print(tienda1.proyec_marketing(2000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15750.0\n",
+      "mi tienda 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apartado 4\n",
+    "tot_tiendas = [tienda1, tienda2, tienda3]\n",
+    "\n",
+    "total_ventas = 0\n",
+    "for i in tot_tiendas:\n",
+    "    total_ventas = total_ventas + i.ventas_ult_mes()\n",
+    "\n",
+    "print(total_ventas)\n",
+    "\n",
+    "# Aaprtado 5\n",
+    "for i in tot_tiendas:\n",
+    "    \n",
+    "    if \"avenida\" in i.direccion.lower():\n",
+    "    #if \"Avenida\" in i.direccion:\n",
+    "        print(i.nombre)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,10 +240,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Perro:\n",
+    "    '''\n",
+    "    Clase perro de ejemplo\n",
+    "    Un perro tiene estos atributos:\n",
+    "        num_patas = 4 -> int\n",
+    "        num_orejas = 2 -> int\n",
+    "        num_ojos = 2 -> int\n",
+    "        velocidad = 0 -> int\n",
+    "    '''\n",
+    "\n",
+    "    num_patas = 4\n",
+    "    num_orejas = 2\n",
+    "    num_ojos = 2\n",
+    "    velocidad = 0\n",
+    "\n",
+    "    def __init__(self, raza, pelo = \"Marron\", duenio = None):\n",
+    "        '''\n",
+    "        Los perros se diferencian unos de otros por los siguientes atributos\n",
+    "        inputs constructor:\n",
+    "            raza -> string\n",
+    "            pelo -> string (\"Marrón\" por defecto)\n",
+    "            duenio -> string (None por defecto)\n",
+    "        '''\n",
+    "\n",
+    "        self.raza = raza\n",
+    "        self.pelo = pelo\n",
+    "        self.duenio = duenio\n",
+    "\n",
+    "    def andar(self, aumento_velocidad):\n",
+    "        '''\n",
+    "        Aumenta el atributo velocidad\n",
+    "        Input:\n",
+    "            aumento_velocidad -> float\n",
+    "        Output: None\n",
+    "        '''\n",
+    "        self.velocidad += aumento_velocidad\n",
+    "\n",
+    "    def parar(self):\n",
+    "        '''\n",
+    "        Ponemos el atributo velocidad a 0\n",
+    "        Output: None\n",
+    "        '''\n",
+    "        self.velocidad = 0\n",
+    "\n",
+    "    def ladrar(self, mensaje):\n",
+    "        '''\n",
+    "        Método para mandar un mensaje\n",
+    "        Input: mensaje -> string\n",
+    "        Output: string\n",
+    "        '''\n",
+    "        return \"GUAU!, \" + mensaje\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Bernardo\n",
+      "Marron\n",
+      "None\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'GUAU!, quiero comer'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "san_ber = Perro(\"San Bernardo\")\n",
+    "print(san_ber.raza)\n",
+    "print(san_ber.pelo)\n",
+    "print(san_ber.duenio)\n",
+    "\n",
+    "print(san_ber.velocidad) # velocidad = 0\n",
+    "\n",
+    "san_ber.andar(2)\n",
+    "print(san_ber.velocidad) # velociada = 2\n",
+    "\n",
+    "san_ber.andar(2)\n",
+    "print(san_ber.velocidad) # velocidad = 4\n",
+    "\n",
+    "san_ber.parar()\n",
+    "print(san_ber.velocidad) # velocidad = 0\n",
+    "\n",
+    "san_ber.ladrar(\"quiero comer\")"
+   ]
   }
  ],
  "metadata": {
@@ -100,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
