--- a/1-Ramp up/6-Programacion funcional/Ejercicios programacion funcional.ipynb
+++ b/1-Ramp up/6-Programacion funcional/Ejercicios programacion funcional.ipynb
@@ -16,10 +16,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'to be or not to be that is the question'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "ejer_1 = (\"to\", \"be\", \"or\", \"not\", \"to\", \"be\", \"that\", \"is\", \"the\", \"question\")\n",
+    "\n",
+    "reduce(lambda x,y: x + \" \" + y, ejer_1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,10 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4, 9, 16, 25)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_2 = (1,2,3,4,5)\n",
+    "tuple(map(lambda x: x**2, ejer_2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,10 +83,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 5, 15, 21, 33, 35)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_3 = (1,2,3,4,5,15,21,22,33,34,35)\n",
+    "\n",
+    "def mult_3_5(x):\n",
+    "    if x % 3 == 0 or x % 5 == 0:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "tuple(filter(mult_3_5, ejer_3))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,10 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.01, 48.08, 120206.76, 240413.51)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_4 = (1000, 8000, 20000000, 40000000)\n",
+    "tuple(map(lambda x: round(x/166.38,2), ejer_4))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('ARYA', 'JOHN', 'ROBB', 'BRAN', 'SANSA', 'RICKON')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_5 = (\"Arya\", \"John\", \"Robb\", \"Bran\", \"Sansa\", \"Rickon\")\n",
+    "tuple(map(lambda x: x.upper(), ejer_5))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +185,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6, 7)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_6 = (\"Lunes\", \"Martes\", \"Miércoles\", \"Jueves\", \"Viernes\", \"Sábado\", \"Domingo\")\n",
+    "\n",
+    "def conversor_dias_semana(x):\n",
+    "    if x == \"Lunes\":\n",
+    "        return 1\n",
+    "    elif x == \"Martes\":\n",
+    "        return 2\n",
+    "    elif x == \"Miércoles\":\n",
+    "        return 3\n",
+    "    elif x == \"Jueves\":\n",
+    "        return 4\n",
+    "    elif x == \"Viernes\":\n",
+    "        return 5\n",
+    "    elif x == \"Sábado\":\n",
+    "        return 6\n",
+    "    elif x == \"Domingo\":\n",
+    "        return 7\n",
+    "    else:\n",
+    "        return 9999\n",
+    "\n",
+    "tuple(map(conversor_dias_semana, ejer_6))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +237,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 15, 16)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_7_1 = (2, 5, 8)\n",
+    "ejer_7_2 = (6, 3, 2)\n",
+    "\n",
+    "def multiplica(x,y):\n",
+    "    return x * y\n",
+    "\n",
+    "tuple(map(multiplica, ejer_7_1, ejer_7_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 15, 16)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_7_1 = (2, 5, 8)\n",
+    "ejer_7_2 = (6, 3, 2)\n",
+    "\n",
+    "tuple(map(lambda x,y: x*y, ejer_7_1, ejer_7_2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Audi', 'Renault', 'BMW')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_8 = (\"VW\", \"Audi\", \"Renault\", \"VW\", \"BMW\")\n",
+    "\n",
+    "tuple(filter(lambda x: x != \"VW\", ejer_8))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,10 +332,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2020-10-10', '2020-01-22')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_9 = [\"2019-04-08\", \"2020-10-10\", \"2020-01-22\", \"2019-07-13\", \"2019-02-01\"]\n",
+    "\n",
+    "def este_anio(x):\n",
+    "    if \"2020\" in x:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "tuple(filter(este_anio, ejer_9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2020-10-10', '2020-01-22')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(filter(lambda x: True if \"2020\" in x else False, ejer_9))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +390,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('php', 'aaa')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejer_10 = (\"php\", \"w3r\", \"Python\", \"abcd\", \"Java\", \"aaa\")\n",
+    "\n",
+    "tuple(filter(lambda x: (x == \"\".join(reversed(x))), ejer_10))"
+   ]
   }
  ],
  "metadata": {
@@ -204,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
