--- a/2-Data Analysis/2-Pandas/3_Operations-in-Pandas.ipynb
+++ b/2-Data Analysis/2-Pandas/3_Operations-in-Pandas.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "2  7  2  5  4"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "2 -0.707107  1.000000e+00 -0.707107  1.224647e-16"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Roaming\\Python\\Python37\\site-packages\\ipykernel_launcher.py:1: FutureWarning: Index.__or__ operating as a set operation is deprecated, in the future this will be a logical operation matching Series.__or__.  Use index.union(other) instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Alaska', 'California', 'New York', 'Texas'], dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area.index | population.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -345,13 +373,14 @@
        "Index(['Alaska', 'California', 'New York', 'Texas'], dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "area.index | population.index"
+    "area.index.union(population.index)\n",
+    "\n"
    ]
   },
   {
@@ -364,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +406,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +415,33 @@
     "A = pd.Series([2, 4, 6], index=[0, 1, 2])\n",
     "B = pd.Series([1, 3, 5], index=[1, 2, 3])\n",
     "A + B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"\\n   A       B\\n0  2      NaN  8    2\\n1  4     1\\n2  6     3\\n3  NaN 8  5  5\\n\\n'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\"\n",
+    "   A       B\n",
+    "0  2      NaN  8    2\n",
+    "1  4     1\n",
+    "2  6     3\n",
+    "3  NaN 8  5  5\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -398,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +467,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +536,7 @@
        "1  5   1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +608,7 @@
        "2  9  2  6"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +680,7 @@
        "2   NaN   NaN NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +759,7 @@
        "2   6.5  13.5  10.5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -754,12 +810,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 9, 8, 9],\n",
-       "       [4, 1, 3, 6],\n",
-       "       [7, 2, 0, 3]])"
+       "array([[3, 8, 2, 4],\n",
+       "       [2, 6, 4, 8],\n",
+       "       [6, 1, 3, 8]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -783,11 +839,11 @@
      "data": {
       "text/plain": [
        "array([[ 0,  0,  0,  0],\n",
-       "       [ 3, -8, -5, -3],\n",
-       "       [ 6, -7, -8, -6]])"
+       "       [-1, -2,  2,  4],\n",
+       "       [ 3, -7,  1,  4]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -852,17 +908,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>-5</td>\n",
-       "      <td>-3</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6</td>\n",
+       "      <td>3</td>\n",
        "      <td>-7</td>\n",
-       "      <td>-8</td>\n",
-       "      <td>-6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -871,11 +927,11 @@
       "text/plain": [
        "   Q  R  S  T\n",
        "0  0  0  0  0\n",
-       "1  3 -8 -5 -3\n",
-       "2  6 -7 -8 -6"
+       "1 -1 -2  2  4\n",
+       "2  3 -7  1  4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -932,24 +988,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-8</td>\n",
+       "      <td>-5</td>\n",
        "      <td>0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>-4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
+       "      <td>-4</td>\n",
        "      <td>0</td>\n",
+       "      <td>-2</td>\n",
        "      <td>2</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -957,18 +1013,92 @@
       ],
       "text/plain": [
        "   Q  R  S  T\n",
-       "0 -8  0 -1  0\n",
-       "1  3  0  2  5\n",
-       "2  5  0 -2  1"
+       "0 -5  0 -6 -4\n",
+       "1 -4  0 -2  2\n",
+       "2  5  0  2  7"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.subtract(df['R'], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Q</th>\n",
+       "      <th>R</th>\n",
+       "      <th>S</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Q  R  S  T\n",
+       "0  3  8  2  4\n",
+       "1  2  6  4  8\n",
+       "2  6  1  3  8"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -980,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1013,24 +1143,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>9</td>\n",
+       "      <td>3</td>\n",
        "      <td>8</td>\n",
-       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1038,12 +1168,12 @@
       ],
       "text/plain": [
        "   Q  R  S  T\n",
-       "0  1  9  8  9\n",
-       "1  4  1  3  6\n",
-       "2  7  2  0  3"
+       "0  3  8  2  4\n",
+       "1  2  6  4  8\n",
+       "2  6  1  3  8"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1065,12 +1195,12 @@
     {
      "data": {
       "text/plain": [
-       "Q    1\n",
-       "S    8\n",
+       "Q    3\n",
+       "S    2\n",
        "Name: 0, dtype: int32"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1127,16 +1257,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-5.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-8.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1146,11 +1276,11 @@
       "text/plain": [
        "     Q   R    S   T\n",
        "0  0.0 NaN  0.0 NaN\n",
-       "1  3.0 NaN -5.0 NaN\n",
-       "2  6.0 NaN -8.0 NaN"
+       "1 -1.0 NaN  2.0 NaN\n",
+       "2  3.0 NaN  1.0 NaN"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
